# writer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
input/: Lab_Test_Descriptions 2.numbers  Lab_Test_Descriptions.csv  dataTobeUpdated copy.csv  testnames.txt
prompts/: __init__.py  clinical_descriptions_prompt.py
src/blood_testing/: __init__.py  __main__.py  generate_descriptions.py  update_tests.py
src/blood_testing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
