[project]
name = "blood-testing"
version = "0.1.0"
description = "Generate clinical descriptions for lab test catalogs using Ollama"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "openai>=1.0",
  "tqdm>=4.66",
]

[project.scripts]
blood-testing = "blood_testing.generate_descriptions:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
